@@ -62,24 +62,27 @@ Usage: java [-options] class [args...]
 
 # 需要在 src/META-INF/MANIFEST.MF 指定 Main-Class: com.xxx.YourMainApp，然后打成 executable jar
 # 否则会出现 Can't execute jar- file: “no main manifest attribute” 的问题
-java -jar yourapp.jar
+$ java -jar yourapp.jar
 
 # 如果不是一个 executable jar 包，则可以通过下面的方式指定主类
-java -cp .:yourapp.jar com.xxx.YourMainApp
+$ java -cp .:yourapp.jar com.xxx.YourMainApp
 
 # 为 jvm 分配可用内存
-java -cp .:yourapp.jar -Xms16g -Xmx16g com.xxx.YourMainApp
+$ java -cp .:yourapp.jar -Xms16g -Xmx16g com.xxx.YourMainApp
+
+# 注意 [options] 必须在 class/-jar 前面，否则会被当作[args]
+$ java -Xms16g -Xmx16g -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -jar rockfs-server-1.0-SNAPSHOT.jar
 ```
 
 ### jar
 压缩/解压缩 jar 文件
 ```shell
 # 解压缩到当前目录，没有解压缩到指定文件夹，可以移除jar包，然后压缩
-jar -xvf test.jar
+$ jar -xvf test.jar
 mv test.jar ../
 
 # 压缩 
-jar -cvf test.jar *
+$ jar -cvf test.jar *
 ```
 
 ### jps
